--- a/index.html
+++ b/index.html
@@ -1,17 +1,20 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ua">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+    />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Start JavaScript!!!</title>
-</head>
-<body>
-<script src="js/basic/main.js"></script>
+  </head>
+  <body>
+    <script src="js/basic/main.js"></script>
+    <h1>Завдання завершено!!!</h1>
 
-<script>
-    //alert("Start JS,  200%!!!!");
-</script>
-</body>
+    <script>
+      //alert("Start JS,  200%!!!!");
+    </script>
+  </body>
 </html>
